[gd_scene load_steps=2 format=3 uid="uid://dg4f43qd23snu"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_hjkmi"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hjkmi")

[node name="Titre" type="Label" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 6.0
offset_right = 767.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 60
text = "I can't Breathe
"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 225.0
offset_top = 195.0
offset_right = 881.0
offset_bottom = 546.0
alignment = 1

[node name="Start_Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 60
text = "Start
"

[node name="Option" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 60
text = "Option"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 60
text = "Quit"

[connection signal="button_down" from="VBoxContainer/Start_Game" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="VBoxContainer/Option" to="." method="_on_option_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
