extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass

func _on_start_game_button_down():
	print("zizi") # Replace with function body.


func _on_option_button_down():
	print("FENT")


func _on_quit_button_down():
	print("Diddy")
